kubernetes/core/postgres/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: postgres
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "100"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`postgres.bhamm-lab.com`)
      middlewares:
        - name: default-headers
      services:
        - name: postgres-operator-ui
          port: 80
  tls:
    secretName: bhamm-lab-tls
